Fixed bug #41504 (json_decode() incorrectly decodes JSON arrays with empty string keys).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@236452 c90b9560-bf6c-de11-be94-00142212c4b1